[gd_scene load_steps=13 format=3 uid="uid://cj3qcpwgq17ov"]

[ext_resource type="Script" path="res://Data/Player/Character.gd" id="1_i3vvh"]
[ext_resource type="Texture2D" uid="uid://cummguuq65x4f" path="res://Assets/Character/PlayerAquaLeft1.png" id="2_br3j1"]
[ext_resource type="Texture2D" uid="uid://dj7rasjvjjuxh" path="res://Assets/Character/PlayerAquaRight1.png" id="3_mo3tc"]
[ext_resource type="Texture2D" uid="uid://bjffx141lft5p" path="res://Assets/2d_lights_and_shadows_neutral_point_light.webp" id="4_l78nn"]
[ext_resource type="Script" path="res://Data/Player/Tools/Tools.gd" id="5_c40v4"]
[ext_resource type="PackedScene" uid="uid://bshu8w0haitut" path="res://Data/Player/Tools/laser.tscn" id="6_l1erv"]
[ext_resource type="PackedScene" uid="uid://bidj12e3i433q" path="res://Data/Player/Tools/knife.tscn" id="7_u31ho"]
[ext_resource type="PackedScene" uid="uid://ckatwb5xmwui7" path="res://Data/Player/Tools/net.tscn" id="8_8w6xf"]
[ext_resource type="Script" path="res://Data/Player/PickupArea.gd" id="9_cyacr"]

[sub_resource type="SpriteFrames" id="SpriteFrames_4470m"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_br3j1")
}, {
"duration": 1.0,
"texture": ExtResource("3_mo3tc")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_mki74"]
radius = 11.5

[sub_resource type="CircleShape2D" id="CircleShape2D_6g8pg"]
radius = 128.0

[node name="Character" type="CharacterBody2D" groups=["Player"]]
z_index = 45
texture_filter = 1
safe_margin = 0.5
script = ExtResource("1_i3vvh")
light_activ_y = 30

[node name="Sprite" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_4470m")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(2, 2)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.5, 0)
shape = SubResource("CapsuleShape2D_mki74")

[node name="PointLight2D" type="PointLight2D" parent="."]
position = Vector2(0, 1)
enabled = false
color = Color(0.239216, 0.239216, 0.239216, 1)
energy = 1.15
texture = ExtResource("4_l78nn")

[node name="Tools" type="Node2D" parent="."]
script = ExtResource("5_c40v4")

[node name="Laser" parent="Tools" instance=ExtResource("6_l1erv")]

[node name="Knife" parent="Tools" instance=ExtResource("7_u31ho")]

[node name="Net" parent="Tools" instance=ExtResource("8_8w6xf")]

[node name="PickupArea" type="Area2D" parent="."]
monitorable = false
script = ExtResource("9_cyacr")

[node name="RigidCollision" type="CollisionShape2D" parent="PickupArea"]
visible = false
position = Vector2(1, 0)
shape = SubResource("CircleShape2D_6g8pg")

[connection signal="body_entered" from="PickupArea" to="PickupArea" method="_on_body_entered"]
[connection signal="body_exited" from="PickupArea" to="PickupArea" method="_on_body_exited"]
